# word_template

./: .gitignore  README.md  pyproject.toml
word_template/: api.py  hooks.py  modules.txt
word_template/config/: desktop.py  docs.py
word_template/public/js/: quotation.js
word_template/word_template/doctype/doctype_word_template_details/: doctype_word_template_details.json  doctype_word_template_details.py
word_template/word_template/doctype/word_template_settings/: test_word_template_settings.py  word_template_settings.js  word_template_settings.json  word_template_settings.py
word_template/word_template/workspace/word_template/: word_template.json
