[project]
name = "word_template"
authors = [
    { name = "GreyCube Technologies", email = "admin@greycube.in"}
]
description = "Generic App For Word Template"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "python-docx~=1.1.2",
    "lxml >= 2.3.2",
    "docxtpl~=0.19.1"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
